<resources>
    <string name="app_name">오늘의눈썹</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //====================Create_Event Activity===========================
    //Title
    <string name="title_create_evt_activity">예약생성</string>
    //Customer Data
    <string name="cusName_create_evt_activity">테스트 고객</string>
    <string name="cusNmb_create_evt_activity">010-3077-3637</string>

    <string name="histroy_tv">방문이력</string>
    <string name="retouch">리터치</string>
    <string name="memo_tv">메모</string>
    <string name="new_reserve">신규</string>
    <string name="load_cus_btn">고객정보 불러오기</string>
    <string name="rsv_date_tv">예약날짜</string>
    <string name="rsv_time_tv">예약시간</string>
    <string name="rsv_type_tv">예약유형</string>
    <string name="rsv_menu_tv">시술메뉴</string>
    <string name="rsv_pay_tv">결제방법</string>
    <string name="rsv_ok_btn">완료</string>


</resources>